# router-security-tool

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  create_phase2_issues.sh  create_phase3_issues.sh  main.py  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  CODE_REVIEW.md  PHASE2_PROGRESS.md  PHASE3_PLAN.md  ROADMAP.md  TESTING.md
scripts/: create_phase3_issues.sh  populate_history.py
src/: __init__.py  cli.py
src/api/: main.py  schemas.py  server.py
src/api/routes/: __init__.py  devices.py  export.py  filesystem.py  history.py  scan.py
src/assessment/: finding.py  service_scanner.py  ssh_assessor.py  vulnerability_scanner.py
src/assessment/profiles/: __init__.py  base.py  cisco.py  detect.py  linksys.py  openwrt.py
src/connections/: detector.py  manager.py
src/database/: __init__.py  cve_manager.py  scan_history.py
src/gui/: main_window.py
src/reports/: export.py
src/scraper/: filesystem.py
src/utils/: mock_data.py
tests/: conftest.py
tests/integration/: test_live_ssh_assessment.py  test_vulnerability_workflow.py
tests/unit/: test_api.py  test_cli.py  test_connection_detector.py  test_connection_manager.py  test_cve_manager.py  test_phase2_features.py  test_profiles.py  test_service_scanner.py  test_ssh_assessor.py  test_vulnerability_scanner.py
web/: package-lock.json  package.json
web/src/: App.tsx  index.css
web/src/api/: client.ts  ws.ts
web/src/components/charts/: RiskGauge.tsx  RiskTrend.tsx  SeverityChart.tsx
web/src/components/layout/: Layout.tsx  Sidebar.tsx
web/src/components/scan/: FindingCard.tsx  ProgressFeed.tsx
web/src/hooks/: useKeyboard.ts
web/src/pages/: Dashboard.tsx  Explorer.tsx  History.tsx  Scan.tsx
web/src/types/: index.ts
