[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "router-security-tool"
version = "1.0.0"
description = "Network device security assessment tool with GUI"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Deven Ducommun"}
]
keywords = ["security", "network", "vulnerability-scanner", "router", "assessment"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: System :: Networking",
]

dependencies = [
    "PyQt5>=5.15.7",
    "pyserial>=3.5",
    "paramiko>=2.11.0",
    "psutil>=5.9.0",
    "jinja2>=3.1.2",
    "reportlab>=4.0.0",
    "requests>=2.28.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.1.2",
    "pytest-qt>=4.2.0",
    "pytest-cov>=4.0.0",
    "black>=22.6.0",
    "flake8>=5.0.4",
    "isort>=5.12.0",
]

[project.scripts]
router-security-tool = "cli:main"

[project.urls]
Repository = "https://github.com/DevenDucommun/router-security-tool"
Issues = "https://github.com/DevenDucommun/router-security-tool/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --strict-markers --tb=short"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Tests that take a long time to run",
    "network: Tests that require network access",
]
